[package]
name = "fs-sound-manager"
version = "1.0.0"
description = "Sound manager & player for FlightSim use"
authors = ["Joseph Yoon"]
license = "GPLv3"
repository = "https://github.com/jyoonPro/fs-sound-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.1", features = ["full"] }
axum = "0.6.18"
axum-server = "0.5.1"
rusqlite = "0.29.0"
rodio = { version = "0.17.1", features = ["symphonia-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
